--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "eacraft13",
   "license": "ISC",
   "dependencies": {
+    "lodash": "^4.17.4",
     "moment": "^2.19.3",
     "request": "^2.83.0"
   }
