--- a/lib/searching/config.json
+++ b/lib/searching/config.json
@@ -1,8 +1,8 @@
 {
     "endpoint": "https://svcs.ebay.com/services/search/FindingService/v1",
-    "headers": {
-        "X-EBAY-SOA-SERVICE-VERSION": "1.0.0",
-        "RESPONSE-DATA-FORMAT": "JSON"
-    },
-    "standardInputFields": {}
+    "params": {
+        "SERVICE-VERSION": "1.0.0",
+        "RESPONSE-DATA-FORMAT": "JSON",
+        "REST-PAYLOAD": true
+    }
 }
